# pogba

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
attached_assets/: Pasted--E-Learning-Platform-Technical-Specification-User-Roles-Admin-Tutor-Student--1760430494871_1760430494872.txt
elearning/: settings.py  urls.py
elearning/accounts/: admin.py  apps.py  decorators.py  middleware.py  models.py  views.py
elearning/accounts/migrations/: 0001_initial.py
elearning/courses/: admin.py  apps.py  models.py  views.py
elearning/courses/migrations/: 0001_initial.py  0002_materialview.py
elearning/payments/: admin.py  apps.py  models.py  views.py
elearning/quizzes/: admin.py  apps.py  models.py  views.py
elearning/quizzes/migrations/: 0001_initial.py  (+1 more)
media/materials/: about.html
templates/: base.html  home.html
templates/accounts/: admin_create_tutor.html  admin_edit_user.html  admin_manage_users.html  login.html  register.html
templates/courses/: admin_create_course.html  admin_edit_course.html  admin_manage_courses.html  catalog.html  course_detail.html  course_learn.html  my_courses.html  tutor_add_material.html  tutor_add_video.html  tutor_course_detail.html  tutor_create_unit.html  tutor_edit_unit.html  tutor_my_courses.html  tutor_student_progress.html  view_material.html
templates/dashboards/: admin.html  student.html  tutor.html
templates/payments/: checkout.html  history.html  success.html
templates/quizzes/: results.html  take_quiz.html  tutor_add_question.html  tutor_create_quiz.html  tutor_edit_quiz.html  tutor_quiz_analytics.html
(+1 files in other folders)
