[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crispy-tailwind>=1.0.3",
    "django>=5.2.7",
    "django-crispy-forms>=2.4",
    "gunicorn>=23.0.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "stripe>=13.0.1",
]
